moved my python code to LSQFit.py - I get a double free error after it exits which I wasn't able to fix

--- a/LeastSquareFit.ipynb
+++ b/LeastSquareFit.ipynb
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -569,8 +569,8 @@
       "Warning in <TROOT::Append>: Replacing existing TH1: hb (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: hc (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: hchi2 (Potential memory leak).\n",
-      "Info in <TCanvas::Print>: pdf file LSQFIT.pdf has been created using the current canvas\n",
-      "Info in <TCanvas::Print>: Current canvas added to pdf file LSQFIT.pdf and file closed\n"
+      "Info in <TCanvas::Print>: pdf file LSQFit.pdf has been created using the current canvas\n",
+      "Info in <TCanvas::Print>: Current canvas added to pdf file LSQFit.pdf and file closed\n"
      ]
     }
    ],
@@ -624,7 +624,7 @@
     "\n",
     "# Update and save\n",
     "canvas.Update()\n",
-    "canvas.SaveAs(\"LSQFIT.pdf(\") # save this canvas in the first page of the pdf\n",
+    "canvas.SaveAs(\"LSQFit.pdf(\") # save this canvas in the first page of the pdf\n",
     "\n",
     "\n",
     "# Draw each histogram in its own pad\n",
@@ -641,7 +641,7 @@
     "hchi2_red.Draw()\n",
     "\n",
     "canvas2.Update()\n",
-    "canvas2.SaveAs(\"LSQFIT.pdf)\") # save this canvas to the next page and close the pdf"
+    "canvas2.SaveAs(\"LSQFit.pdf)\") # save this canvas to the next page and close the pdf"
    ]
   },
   {
